@@ -1,4 +1,5 @@
 HEAD
+    + Properly write /etc/resolv.conf file
     + Added retries to the mount image section when deploying an scenario
 0.9
     + Improved behavior of test retry/continue prompt
